Fixed connection tabs overlapping on mobile screen

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* outline: 1px dotted green; */
 }
 
 :root {
@@ -133,18 +132,18 @@ nav {
 .friend-box {
     justify-content: start;
     align-items: center;
-    padding: 0.5em 1em 0.5em 0.5em;
+    padding: 0.5em;
     margin: 1em 0;
     border-radius: 10px;
     background: var(--accent-4);
 }
 
 .user-box {
-    width: 200px;
+    width: 193px;
     height: 200px;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5em 1em 0.5em 0.5em;
+    padding: 0.5em;
     margin: 1em 1em;
     border-radius: 5px;
     background: var(--accent-4);
@@ -155,11 +154,9 @@ nav {
     flex-flow: row wrap;
 }
 
-
 .event-box {
     margin: 1em 0;
     padding: 1em;
-    /* border: 1px solid black; */
     border-radius: 10px;
     background: var(--accent-4);
 }
@@ -440,6 +437,10 @@ h3 {
 @media(max-width: 640px) {
     .speech-bubble {
         display: none;
+    }
+    .tabs {
+        word-wrap: break-word;
+        font-size: 0.75em;
     }
 }
 
